--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.12)
 
 set(BUILDSYSTEM_PROJECTS_DIR 
-    mylib
-    myexe
+    libClient
+    libServer
+    exeClient
+    exeServer
 )
 
 include(${PROJECT_SOURCE_DIR}/cmake/BuildSystem.cmake)
