Déclaration des fonctions de base et définition des fonctions du client

--- a/main/exeClient/CMakeLists.txt
+++ b/main/exeClient/CMakeLists.txt
@@ -14,3 +14,5 @@ set(HEADERS ${INCLUDE_FOLDER}/main.hpp)
 
 #client exec
 add_executable(Client ${SOURCES} ${HEADERS})
+
+target_link_libraries(Client client_lib)
